--- a/data/site_template/music.html
+++ b/data/site_template/music.html
@@ -39,7 +39,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="wave.js"></script>
     <script>
       var vm = new Vue({
