--- a/data/site_template/index.html
+++ b/data/site_template/index.html
@@ -27,6 +27,10 @@
         <search-box
           v-on:updated-search-text="onSearchTextChanged">
         </search-box>
+        <div class="info-card" v-if="pagedMusics.length <= 0">
+          <i class="fas fa-info-circle"></i>
+          &nbsp;曲が見つかりませんでした
+        </div>
         <player-list
           v-bind:musicinfo-urls="pagedMusics"
           v-on:started-playing-callback="startedPlayingCallback">
