--- a/data/site_template/index.html
+++ b/data/site_template/index.html
@@ -64,6 +64,7 @@
               this.musics = musics;
             }).catch((response) => {
               console.log(response);
+              alert("Failed to load musiclist.")
             });
         },
         methods: {
