再生/一時停止アイコンをFontAwesomeのものにした

--- a/data/site_template/music.html
+++ b/data/site_template/music.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="player-mobile.css" media="screen and (max-width: 479px)">
     <link rel="stylesheet" href="player-desktop.css" media="screen and (min-width: 480px)">
     <title>${title}</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <style>
       .profile-bg {
         background-image: url("${profile_background}");
