musicsPerPageが文字列型として扱われる問題を修正した

--- a/data/site_template/index.html
+++ b/data/site_template/index.html
@@ -37,7 +37,7 @@
         </player-list>
         <pager
           v-bind:musics="musicInfoUrls"
-          musics-per-page="10"
+          v-bind:musics-per-page="10"
           v-on:page-changed="onPageChanged">
         </pager>
       </div>
